--- a/SandBox.html
+++ b/SandBox.html
@@ -12,89 +12,113 @@
 
 <script>
 
-const SUITS = 'CDHS';
-const FACES = 'JQKA';
+// const SUITS = 'CDHS';
+// const FACES = 'JQKA';
+//
+// // returns a new array with all cards in the deck sorted by suit
+// function fullDeck() {
+//   var result = [];
+//   for (var j=0; j<4; j++) {
+//     var suit = SUITS[j];
+//     for (var i=2; i<11; i++){
+//       result.push(i+suit);
+//     }
+//     for (var k=0; k<4; k++) {
+//       result.push(FACES[k] + suit);
+//     }
+//   }
+//   console.log(result);
+//   return result;
+// }
+// var cards = fullDeck();
+//
+// // returns a random item in array cards
+// function randomizer() {
+//   return cards[randomInt(cards.length)];
+// }
+//
+// // returns a random num [0 , limit)
+// function randomInt(limit){
+//   return Math.floor(limit * Math.random());
+// }
+//
+//
+// var board = [];
+//
+// //
+// function dealCards(number) {
+//   if (number > cards.length){
+//     throw 'error: not enough cards.';
+//   }
+//   for (var i = 0; i < number; i++) {
+//     board.push('');
+//   }
+// }
+//
+// dealCards(52);
+//
+//
+// // Assigns random cards into array board and ensures there are no duplicates
+// function createBoard() {
+//   for (var i = 0; i < board.length; i++) {
+//     board[i]=randomizer();
+//     //console.log('pick', board[i]);
+//     for (var j = i-1; j >= 0; j--){
+//       var test = board[j];
+//       //console.log('test', 'i='+i, 'j='+j, test, board);
+//       if (board[i] == test){
+//         board[i]=randomizer();
+//         j = i; // restart inner loop (j = i-1+1)
+//         //console.log('duplicate!', 'new='+board[i], board);
+//       } else {
+//         //console.log('OK!');
+//       }
+//     }
+//   }
+//   console.log('final', board);
+// }
+// createBoard();
+//
+// function testCreateBoard(){
+//   console.log('begin!');
+//   var t1 = Date.now();
+//   var c = 0;
+//   var numTests = 100000;
+//   for (var i = 0; i < numTests; i++) {
+//     createBoard();
+//     if (board[0]==board[2] || board[0]==board[1] || board[1]==board[2]) {
+//       c++;
+//     }
+//   }
+//   console.log('# of errors:', c, 'Relative error:', 100*c/numTests+'%');
+//   console.log('done!');
+//   var t2 = Date.now();
+//   console.log((t2-t1)/1000);
+// }
 
-// returns a new array with all cards in the deck sorted by suit
-function fullDeck() {
-  var result = [];
-  for (var j=0; j<4; j++) {
-    var suit = SUITS[j];
-    for (var i=2; i<11; i++){
-      result.push(i+suit);
-    }
-    for (var k=0; k<4; k++) {
-      result.push(FACES[k] + suit);
-    }
+var array = ['a', 'b', 'c', 'd', 'e'];
+var length = array.length;
+var array2 = []
+console.log(array);
+function random() {
+  var randInt = Math.floor(array.length * Math.random());
+  console.log(randInt);
+  var letter = array[randInt];
+  console.log(letter);
+  array.splice(randInt, 1);
+  console.log(array);
+  return letter;
+}
+
+
+function shuffle() {
+  for (i = 0; i < length; i++) {
+    array2[i] = random();
   }
-  console.log(result);
-  return result;
-}
-var cards = fullDeck();
-
-// returns a random item in array cards
-function randomizer() {
-  return cards[randomInt(cards.length)];
+  console.log('end',array2);
 }
 
-// returns a random num [0 , limit)
-function randomInt(limit){
-  return Math.floor(limit * Math.random());
-}
-
-
-var board = [];
-
-// 
-function dealCards(number) {
-  if (number > cards.length){
-    throw 'error: not enough cards.';
-  }
-  for (var i = 0; i < number; i++) {
-    board.push('');
-  }
-}
-
-dealCards(52);
-
-
-// Assigns random cards into array board and ensures there are no duplicates
-function createBoard() {
-  for (var i = 0; i < board.length; i++) {
-    board[i]=randomizer();
-    //console.log('pick', board[i]);
-    for (var j = i-1; j >= 0; j--){
-      var test = board[j];
-      //console.log('test', 'i='+i, 'j='+j, test, board);
-      if (board[i] == test){
-        board[i]=randomizer();
-        j = i; // restart inner loop (j = i-1+1)
-        //console.log('duplicate!', 'new='+board[i], board);
-      } else {
-        //console.log('OK!');
-      }
-    }
-  }
-  console.log('final', board);
-}
-createBoard();
-
-function testCreateBoard(){
-  console.log('begin!');
-  var t1 = Date.now();
-  var c = 0;
-  var numTests = 100000;
-  for (var i = 0; i < numTests; i++) {
-    createBoard();
-    if (board[0]==board[2] || board[0]==board[1] || board[1]==board[2]) {
-      c++;
-    }
-  }
-  console.log('# of errors:', c, 'Relative error:', 100*c/numTests+'%');
-  console.log('done!');
-  var t2 = Date.now();
-  console.log((t2-t1)/1000);
-}
+shuffle();
 
 </script>
 </body>
