--- a/poker.html
+++ b/poker.html
@@ -89,7 +89,7 @@ burntButton.onclick = flipBurnt;
 cacheCards(); // to cache images
 
 function cacheCards() {
-  imageCreate('LAUNCH', 'cacheCards');
+  imageCreate('launch', 'cacheCards');
   var deck = makeSortedDeck();
   for (var i = 0; i < deck.length; i++){
     imageCreate(deck[i], 'cacheCards');
@@ -158,7 +158,7 @@ function randomInt(limit){
 // empties the burnt card slot and shows  image
 function burnCard(slotId) {
   clearCard(slotId);
-  imageCreate('LAUNCH', slotId);
+  imageCreate('launch', slotId);
 }
 
 // reveals burnt card
@@ -214,12 +214,14 @@ function dealRiver() {
 // clears all dealt cards
 function clearBoard() {
   gameDeck = makeShuffledDeck();
+  b1 = b2 = b3 = '';
   for (var i=0; i<cardIds.length; i++){
     clearCard(cardIds[i]);
   }
   dealButton.textContent = "Redeal";
   dealButton.onclick = dealHand;
 }
+
 
 </script>
 </body>
